tests/baselines/reference/recursiveInheritance3.errors.txt
==== tests/cases/compiler/recursiveInheritance3.ts (1 errors) ====
    class C implements I {
          ~
!!! recursiveInheritance3.ts(1,7): error TS2100: Type 'C' recursively references itself as a base type.
        public foo(x: any) { return x; }
        private x = 1;
    }
    
    interface I extends C {
        other(x: any): any;
    }